[package]
name = "tokio_kcp"
version = "0.10.0"
authors = ["Matrix <113445886@qq.com>", "Y. T. Chung <zonyitoo@gmail.com>"]
description = "A kcp implementation for tokio"
license = "MIT"
readme = "README.md"
keywords = ["kcp", "udp", "reliable", "tokio"]
documentation = "https://docs.rs/tokio_kcp"
repository = "https://github.com/Matrix-Zhang/tokio_kcp"
edition = "2018"

[[bin]]
name = "server"
path = "examples/server.rs"

[[bin]]
name = "client"
path = "examples/client.rs"

[dependencies]
bytes = "1.1"
futures-util = "0.3"
kcp = "0.5.3"
log = "0.4"
tokio = { version = "1.37", features = ["net", "sync", "rt", "macros", "time"] }
byte_string = "1"
rand = "0.8"
spin = "0.9"
env_logger = "0.11"
chrono = "0.4.38"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.11", features = [
    "net",
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "io-std",
] }
